--- a/demo.html
+++ b/demo.html
@@ -8,8 +8,8 @@
   <body>
     <div class="logo"></div>
     
-    <script type="text/javascript>
-      MaptimeLogoify();
+    <script type="text/javascript">
+      $(document).ready(MaptimeLogoify());
     </script>
   </body>
 </html>
