fixed javascript and demo page. maybe.

--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,18 @@
   <head>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="maptimelogoify.js"></script>
+    <style type="text/css">
+      div.logo {
+        position: absolute;
+        top:100px;
+        left:20px;
+        font-size: 52pt;
+        font-family: sans-serif;
+        -ms-transform: rotate(-7deg); /* IE 9 */
+        -webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
+        transform: rotate(-7deg);
+      }
+    </style>
   </head>
 
   <body>
