--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="maptimelogoify.js"></script>
     <style type="text/css">
@@ -9,7 +10,7 @@
         top:100px;
         left:20px;
         font-size: 52pt;
-        font-family: sans-serif;
+        font-family: Comfortaa, sans-serif;
         -ms-transform: rotate(-7deg); /* IE 9 */
         -webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
         transform: rotate(-7deg);
