Add Comfortaa font

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
         top:100px;
         left:20px;
         font-size: 52pt;
-        font-family: Comfortaa, sans-serif;
+        font-family: 'Comfortaa', sans-serif;
         -ms-transform: rotate(-7deg); /* IE 9 */
         -webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
         transform: rotate(-7deg);
