--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css' />
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="maptimelogoify.js"></script>
     <style type="text/css">
